fix: Use contrasting hover color for header form

--- a/site/web/app/themes/abundanthousingma/resources/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/abundanthousingma/resources/assets/styles/layouts/_pages.scss
@@ -69,6 +69,10 @@
       @media only screen and (max-width: $viewport-breakpoint-large) {
         width: 100%;
       }
+
+      &:hover {
+        background-color: $action-color--alt;
+      }
     }
 
     h3 {
